force-app/main/default/objects/ADM_Work_Subscriber__c/ADM_Work_Subscriber__c.object-meta.xml
<CustomObject>
    <description>Used to create linkage between the custom work object and users. This will be queried later to be used when sending out notification emails.</description>
    <label>Work Subscriber</label>
    <nameField>
        <displayFormat>WS-{000000}</displayFormat>
        <label>Work Update Subscription</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Subscribers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>