force-app/main/default/objects/ADM_Work_Subscriber__c/fields/Always_Send__c.field-meta.xml
<CustomField>
    <fullName>Always_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Always Send</label>
    <type>Checkbox</type>
</CustomField>