force-app/main/default/objects/ADM_Work_Subscriber__c/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto Assigned</fullName>
            </value>
            <value>
                <fullName>Manually Assigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>