force-app/main/default/objects/ADM_Work_Subscriber__c/fields/Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>Distribution_List__c</fullName>
    <label>Distribution List</label>
    <type>Email</type>
</CustomField>