force-app/main/default/objects/ADM_Work_Subscriber__c/fields/Is_Copy__c.field-meta.xml
<CustomField>
    <fullName>Is_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Copy</label>
    <type>Checkbox</type>
</CustomField>