force-app/main/default/objects/ADM_Work_Subscriber__c/fields/Recipient_Input__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Input__c</fullName>
    <label>Recipient Input</label>
    <length>50</length>
    <type>Text</type>
</CustomField>