force-app/main/default/objects/ADM_Work_Subscriber__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N90000000NkrdEAC</relationshipName>
    <type>Lookup</type>
</CustomField>