force-app/main/default/objects/ADM_Work_Subscriber__c/fields/WorkId__c.field-meta.xml
<CustomField>
    <fullName>WorkId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WorkId</label>
    <referenceTo>ADM_Work__c</referenceTo>
    <relationshipName>R00N90000000NkreEAC</relationshipName>
    <type>Lookup</type>
</CustomField>